# tree-sitter-sql-mcp-server

./: Cargo.toml
src/: common.rs  main.rs
src/common/: counter.rs  tree_sitter_sql.rs
