[package]
name = "tree_sitter_sql_mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
schemars = { version = "0.8", optional = true }
tree-sitter = "0.20.3"
tree-sitter-sql = { git = "https://github.com/future-architect/tree-sitter-sql" }
